# SeviceHubAI-BE

./: README.md  render.yaml
service_desk_ai_backend/: .env.example  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
service_desk_ai_backend/routers/: __init__.py  tickets.py  users.py
