[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-desk-ai-backend"
version = "0.1.0"
description = "Backend for ServiceDeskAI enterprise service desk"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]

# Dependencies
dependencies = [
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.8",
    "httpx>=0.27.2",
    "email-validator>=2.2.0",
    "gunicorn>=22.0.0"
]

[tool.setuptools.packages.find]
where = ["service_desk_ai_backend"]
